# backend-template

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  contract_test.py  dredd.yml  hooks.py  main.py  openapi.yaml  package-lock.json  pyproject.toml  schema_test.py
src/api/: database.py  main.py  models.py
tests/: test_api.py
