[project]
name = "rest-api-sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.34.3",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "httpx>=0.28.1",
    "lizard>=1.17.31",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "requests>=2.32.4",
    "ruff>=0.12.1",
    "schemathesis>=3.33.0",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "T20", "PYI"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.lizard]
# Complexity thresholds for code quality
ccn_threshold = 8        # Cyclomatic complexity threshold
length_threshold = 50    # Function length threshold
parameter_threshold = 5  # Parameter count threshold
